--- a/changelog
+++ b/changelog
@@ -1,6 +1,6 @@
 master
 - Mayhem
-  Add /po/ archive redirection for threads, images and post resurection.
+  Add /po/ archive redirection for threads, images and post resurrection.
 
 2.37.3
 - Mayhem
