Add Thread Hiding in the Menu, with stub setting. Add an option to toggle Thread/Reply Hiding Buttons. Save hiding settings of individual threads, like if we want to see its stub or not when we reload the page. Add the menu buttons in stubs. Make the open function for menu entries optional.

--- a/changelog
+++ b/changelog
@@ -2,6 +2,8 @@ alpha
 - Mayhem
   Added touch and multi-touch support for dragging windows.
   The Thread Updater will pause when offline, and resume when online.
+  Added Thread & Post Hiding in the Menu, with individual settings.
+  Thread & Post Hiding Buttons can now be disabled in the settings.
   Recursive Hiding will be automatically applied when manually hiding a post.
   Fix Chrome's install warning that 4chan X would execute on all domains.
   Fix Quote Backlinks not affecting inlined quotes.
