--- a/changelog
+++ b/changelog
@@ -1,5 +1,10 @@
 master
 
+1.1.0
+Zixaphir
+- Invisible Icons
+- Bugfixes
+
 1.0.46
 Zixaphir
 - Fix catalog and back button being incorrectly aligned in the vertical orientation
