--- a/changelog
+++ b/changelog
@@ -1,11 +1,16 @@
 alpha
 - Mayhem
+  Major rewrite of 4chan X.
+  New feature, the Header:
+    Access the list of boards directly from the Header.
+    Access to settings and extra features easily from the Header's menu.
+    Can be auto-hidden.
   Added touch and multi-touch support for dragging windows.
   The Thread Updater will pause when offline, and resume when online.
   Added Thread & Post Hiding in the Menu, with individual settings.
   Thread & Post Hiding Buttons can now be disabled in the settings.
   Recursive Hiding will be automatically applied when manually hiding a post.
-  Fix Chrome's install warning that 4chan X would execute on all domains.
+  Fix Chrome's install warning saying that 4chan X would execute on all domains.
   Fix Quote Backlinks not affecting inlined quotes.
   Fix Quote Highlighting not affecting inlined quotes.
 
