Add support for 4chan's various themes. On the catalog, it allows dialogs to be correctly themed as it didn't have the same stylesheets. Fix #919.

--- a/changelog
+++ b/changelog
@@ -13,6 +13,7 @@ alpha
   Fix Chrome's install warning saying that 4chan X would execute on all domains.
   Fix Quote Backlinks not affecting inlined quotes.
   Fix Quote Highlighting not affecting inlined quotes.
+  Fix unreadable inlined posts with the Tomorrow theme.
 
 master
 - Mayhem
