Remove the 'Open Reply in New Tab' config and make it the default behavior. Various QR fixes. Tiny styling adjustments. You can now create threads when outside of the index. Allow selection-to-quote to work on any text inside the quoted post, not just the comment. Close #789.

--- a/changelog
+++ b/changelog
@@ -5,8 +5,11 @@ alpha
     Access the list of boards directly from the Header.
     From the Header's menu, access to:
       Settings
-      Quick Reply
+      Quick Reply shortcut
     Can be auto-hidden.
+  QR changes:
+    Creating threads outside of the index is now possible.
+    Selection-to-quote also applies to selected text inside the post, not just inside the comment.
   Added touch and multi-touch support for dragging windows.
   The Thread Updater will pause when offline, and resume when online.
   Added Thread & Post Hiding in the Menu, with individual settings.
