--- a/changelog
+++ b/changelog
@@ -26,6 +26,7 @@ alpha
   Fix Quote Backlinks not affecting inlined quotes.
   Fix Quote Highlighting not affecting inlined quotes.
   Fix unreadable inlined posts with the Tomorrow theme.
+  Fix user ID highlighting on fetched posts.
 
 master
 
