--- a/changelog
+++ b/changelog
@@ -12,6 +12,7 @@ beta
       Can be auto-hidden.
     Egocentrism:
       "(You)" will be added to quotes linking to your posts.
+      The Unread tab icon will indicate new unread posts quoting you.
       Delete links in the post menu will only appear for your posts.
 
   QR changes:
