Add unread + You tab icons. Close #916

--- a/changelog
+++ b/changelog
@@ -12,7 +12,7 @@ beta
       Can be auto-hidden.
     Egocentrism:
       "(You)" will be added to quotes linking to your posts.
-      The Unread tab icon will indicate new unread posts quoting you.
+      The Unread tab icon will indicate new unread posts quoting you with an exclamation mark.
       Delete links in the post menu will only appear for your posts.
 
   QR changes:
