--- a/changelog
+++ b/changelog
@@ -20,6 +20,7 @@ beta
     Creating threads outside of the index is now possible.
     Selection-to-quote also applies to selected text inside the post, not just inside the comment.
     Quoting the OP will not insert the >>opnumber anymore unless the QR was already opened.
+    Added thumbnailing support for Opera.
 
   Image Expansion changes:
     Expanding OP images won't squish replies anymore.
