Update thread stats to make better use of the API, as it actually gives us the number of replies/files and if we're past the bump limit/file limit.

--- a/changelog
+++ b/changelog
@@ -42,6 +42,7 @@ beta
 
   Thread Stats changes:
     Post and file count will now adjust with deleted posts.
+    The post count will now go red past the bump limit.
     The file count will not go red anymore when the thread is a sticky.
 
   Thread/Post Hiding changes:
