--- a/changelog
+++ b/changelog
@@ -5,6 +5,7 @@ beta
   New features:
     Header:
       Access the list of boards directly from the Header.
+      The board list can be customized.
       From the Header's menu, access to:
         Settings
         Quick Reply shortcut
