--- a/changelog
+++ b/changelog
@@ -1,677 +1,9 @@
 master
 
-1.1.2
-Zixaphir
-- Bugfixes.
-
-1.1.1
-Zixaphir
-- Ability to mark owned posts
-- Ability to navigate thread via quote hashes with Quote Inline enabled
-- Ability to indicate spoilers with remove spoilers enabled
-- A really crude appchan x icon
-- Bugfixes
-
-1.1.0
-Zixaphir
-- Invisible Icons
-- Bugfixes
-
-1.0.46
-Zixaphir
-- Fix catalog and back button being incorrectly aligned in the vertical orientation
-
-1.0.45
-Applebloom
-- SVG Filter that allows the Captcha to match theme colors
-Zixaphir
-- Removed Captcha Opacity in favor of Applebloom's SVG Filter
-- Add Inline Quote Resurrection to /c/, /int/, and /po/
-- Fixed Catalog Link toggle not appearing with Custom Navigation
-- Added an option to show the post form header
-- Fixed an issue with the catalog icon being incorrectly positioned with On Side Pagination
-- The catalog icon now shows in opened threads, instead of just on the board index
-- Moved the Post Form Slideout Transitioned option into the Post Form section
-- Fixed a bug that caused the theme editor to update the color widget
-- Defaults have been changed to look more vanilla
-- Mascots now receive a small amount of bottom padding with 4chan SS navigation
-  ( Not perfect, there are places where there are misses )
-
-1.0.44
-Zixaphir
-- Linkifier now makes a lot of assumptions about what is and isn't a link
-  * this means there will be a of false positives, but almost no misses.
-
-1.0.43
-Zixaphir
-- Fix quote preview performance issues.
-
-1.0.40-42
-- Zixaphir
-  Bugfixes
-
-1.0.39
-- Zixaphir
-  Better Linkifier
-
-1.0.38
-- Zixaphir & ihavenoface
-  Linkifier Mk.II
-
-1.0.37
-- Zixaphir
-  Fix youtube embedding.
-
-1.0.36
-- Zixaphir
-  Fix image expansion. ( lol, moot handling 3rd party developer relations: http://boards.4chan.org/q/res/385389 )
-
-1.0.35
-- Mayhem
-  Fix quoting inside inlined backlinks.
-- aeosynth
-  Beep, beep, motherfucker
-  Don't expand pdfs
-- Zixaphir
-  New linkifier that respects <wbr>s.
-  Fixed Filter + Menu
-  Fixed image expansion
-  Fixed forward links and id colors
-
-1.0.34
-- Mayhem
-  Fix quoting.
-
-1.0.33
-- Zixaphir
-  Fix Chrome support (for real this time)
-
-1.0.32
-- Zixaphir
-  Fix Chrome support
-
-1.0.31
-- Zixaphir
-  Added an option to prepend / append navigation delimiters
-- Mayhem
-  Fix successful posting causing errors.
-  Fix 4chan X trying to interact with >>>/board/rules links.
-
-1.0.30
-- Zixaphir
-  Fixed deadlink redirection
-
-1.0.29
-- Zixaphir
-  Bugfix release
-  - Icon Overlapping fixed
-  - No themes being applied should be fixed
-  - /pol/ is now correctly detected as a NSFW board
-
-1.0.28
-- Zixaphir
-  Added Per-Board Personas.
-  Fappe Tyme.
-  Theme Editor slider now properly reflects current hue.
-  QR has a default position in 'float' mode now.
-  Added an option to make the updater moveable.
-  Cached embed titles are now pruned after seven days.
-  Fix Linkifier and <wbr>. Linkifier should now handle multi-lined links, I think.
-- noface
-  Added new feature 'Remove Spoilers'.
-  Added input to specify height and width of embeds.
-  Fixed Anonymize not working on stubs.
-  Fixed deadquotes showing up in code-tags.
-- Mayhem
-  Fix posting warning not displaying the reason.
-  Fix selection quoting on Opera.
-  Fix history bug with Persistent QR enabled on Chrome.
-  
-
-1.0.27
-- Zixaphir
-  Fixed a bug involving malformed quotes generating an error. MOOOOOOOOT!!
-
-1.0.26
-- Zixaphir
-  Fixed a prototyping bug resulting in an error with Embedding.
-
-1.0.25
-- Zixaphir
-  Fixed a bug in the Archive Redirector that was causing an error popup (but was otherwise behaving correctly)
-  Added a crunchbang emoji
-  Added error-checking for the embedder title link
-
-1.0.24
-- Zixaphir
-  Fixed a mascot bug which reported the mascot had no name
-  New Options:
-  - Shrink Ads
-  - Hide Mascots on Catalog
-- noface
-  Added liveleak embedding and Vimeo Link Title.
-- Mayhem
-  Added catalog support:
-    Sync thread hiding between index and catalog.
-
-1.0.23
-- Zixaphir
-  Fixed catalog links bug
-  Fixed catalog button being being overlapped by the navbar (and therefore unclickable)
-  Fixed themes with transparent replies from having their background colors changed in the theme previews
-  Navigation links should no longer be able to overlap or underlap appchan's icons
-  Added an italic indicators for inlined post quotelinks/backlinks/forwardlinks.
-  
-
-1.0.22
-- Zixaphir
-  Fix embedding in inlined posts
-  Fix options menu on Chrome
-
-1.0.21
-- Zixaphir
-  Fixed QR not refreshing properly
-  Some fixes to the catalogy
-
-1.0.20
-- Zixaphir
-  Typo
-
-1.0.19
-- noface
-  Added Catalog Links toggle.
-  Exclude 4chan x from executing on catalogs.
-  Added Link Title for Youtube links.
-  Added Ban Checker.
-- Zixaphir
-  Fix #optionsbar height
-  'Mascot Position' is now an override.
-  Fix undeleting
-  Switched a lot of pixel metrics to "em"s.
-  Fix thread and reply navigation link vertical alignments and size
-  Better mascot positioning
-  Select inputs are now implemented in HTML and JS rather than left to the user agent.
-  Button elements are now styled.
-  Added an advertisement for Appchan's mascot booru.
-  Style catalog
-  New Options:
-  - Custom CSS (with examples)
-  - Single Column mode
-  - Reset Custom Navigation
-  Removed:
-  - Manual Icon Positioning (was broken anyways)
-  - Manual selection of theme luminance
-
-1.0.18
-- Fix "Hide Show Post Form" doing opposite of what it said it did.
-
-1.0.17
-- Mayhem
-  Fix next/previous page keybinds.
-- noface
-  Improved checking for own post directly after posting. This should sort out a number of small hiccups.
-  Fixed crossquotes not showing the correct archiver.
-  Added support for posting with QR and tags on /f/.
-  Added redirection for /c/ and /po/.
-  Added keybinds for math and eqn tags on /sci/.
-  Added full image redirection to /mu/.
-  Removed ArchiveLink redirection from /soc/ (URLs will still be redirected).
-  Quick tags won't be inserted where not possible anymore (like spoilers on /g/).
-  Added support for coloured IDs and post highlighting from the native 4chan extension.
-  Improved Linkifier to be much lighter.
-  Embedding:
-    - Adds support for SoundCloud, Vocaroo, mp3/ogg/wav files.
-    - Adds a menu button 'Embed all in post'.
-- Zixaphir
-  Settings editor now applies changes on setting change
-    (when you unfocus the text input on text inputs)
-  Selecting a mascot or theme now changes the current mascot to that mascot
-    Likewise, deselecting the current mascot sets a random mascot from enabled (or none if none are)
-  Theme Editor color selector now supports click and drag (as changes are reflected in real-time, this can be slow)
-  "white" shadows have been removed from all themes
-  Browse button has been removed from the post form
-    Clicking the file input does the same thing.
-  Extended embedder to allow ease of adding new types of embeds
-  Theme editor now appends " [modded]" to included themes when you edit them
-    If you remove it and save the theme, it will not be added if you edit it again.
-  Default font is now "sans-serif", which uses the browser's configurable "sans-serif" font.
-  Updated settings menu aesthetics
-  - Mascot menu redone
-  - Tabs stylings now reflect the active tab
-  - Single-column layout as opposed to suboption "blocks"
-  - Theme previews should now properly reflect appchan font weights
-  Removed Options:
-  - 4chan SS Emulation
-  New Options:
-  - Hide Show Post Form
-  - Greyscale Mascots
-  - Mascot Opacity
-  - Emoji Spacing
-  - 4chan SS Navigation
-  - 4chan SS Sidebar
-  - Post Form Decorations
-  - Youtube Embed -> Embedding
-  
-
-1.0.16
-- Zixaphir
-  Fixed a bug causing the board title to be incorrectly positioned.
-  Custom Board Titles (and subtitles)
-
-1.0.15
-- Zixaphir
-  Fixed issues with non-fit width replies
-  Fixed issues with the hider [ - ] being too wide with monospaced fonts
-  Added a 4chan SS Emulation Mode (may break this up into several options later)
-  Removed underlines from #navlinks with the underline link option enabled (they are icons, they don't need underlines)
-  Backlinks now auto-adjust padding when positioned at the bottom. Changing this option requires a refresh to remove padding. This padding does not change on window resize.
-  Mascot editor now replaces spaces and special characters in the mascot name with underscores. Underscores will be translated back as spaces for display purposes.
-  Outlines are no longer used by Appchan X for any reason and have been replaced with border colors. Outlines are bad and you should feel bad for using them.
-  Resolved a bug where threads with spoilers caused odd behavior with Image Expansion.
-  Appchan X no longer replaces style sheets upon changing settings but applies changes to the existing sheet.
-
-1.0.14
-- Zixaphir
-  Expanded backlinks position option.
-  Options for adding background colors to the file and post information bars.
-  Added Ahoka's theme, "安心院なじみ".
-  Faster and better transitions for slideout elements.
-
-1.0.13
-- Zixaphir
-  Fixed a display bug with exLinks.
-
-1.0.12
-- Zixaphir
-  Backlinks position option
-  Fixed a bug where the mascot editor was causing themes not to apply
-
-1.0.11
-- noface
-  Added keybind to toggle the hide status of the QR
-  'Check for Update' is now much less obstrusive.
-  Per-board archivers can now be selected under the rice tab.
-- Zixaphir
-  jscolor for theme editing
-
-1.0.10
-- Zixaphir
-  Bugfix.
-
-1.0.9
-- Zixaphir
-  Fix image hover bugs.
-
-1.0.8
-- Zixaphir
-  Bugfixes
-  - Icon Positions
-  - Recursive Filtering breaking _everything_
-
-1.0.7
-- Zixaphir
-  Floating Post Form option.
-
-1.0.6
-- Zixaphir
-  Style Option removed
-  - Styles and Themes are required.
-  Navlinks are now colored as icons.
-  Enabled Floating QR Post Form Option.
-  RedUX and Obsidianchan Theme Tweaks
-  ExScript Support
-  Option to auto-position icons rather than depend on my spotty manual positioning
-- Mayhem
-  Added possibility to display unix timestamps with File Info Formatting.
-
-1.0.5
-- Zixaphir
-  Checkbox alignments should be better now
-  Reply Spacing set to none now attempts to remove double-borders
-  Fix ExLinks icon broken by 1.0.4 release.
-
-1.0.4
-- noface
-  Archivelinks improvements
-- Zixaphir
-  Fix 4sight
-  Color navlinks like icons
-  Fix incorrect icons for dark and light themes.
-  Updater post count now updates on window focus like it does on window scroll.
-  Better linkifier.
-  Fix logo reflections on Chrome.
-  Positioned the OP menu button like reply menu buttons (thread hider will not be positioned due to syntax issues with hover opacity)
-  Theme importer fixes for 4chan SS
-  Darker prettyPrint background for code tags on dark themes
-  .highlight and :target fixes
-
-1.0.0 - 1.0.3
-- Zixaphir
-  Fix 4chan Pass support.
-  Icon themes.
-  Fixed an issue where mascots were not saving.
-  New options for navigation and pagination alignment
-  Brighter icons
-  Logo reflections
-  Recategorized Options
-  Smaller minimal sizes
-  Redo Gasai Yuno 2 mascot
-  Redo Konjiki no Yami (Golden Darkness) Mascot
-  Better Embedder
-- noface
-  Archives now populate a submenu just like the quicklinks for the Filter.
-
-0.19.0 (Version 1.0.0rc1)
-- noface
-  Updater should now check until own post is found.
-  "Don't expand spoilers when using ImageExpand" should now work as expected and gets a new option.
-  postContainer now adds a class 'hidden' when the stub is hidden.
-- Zixaphir
-  Removed Bold from backlinks.
-  Allow "Persistent QR" with Style enabled.
-  Quick Reply file 'input' now reflects maximum board file size and Shift-Click to clear functionality.
-  Youtube Unembedding.
-  Prefetch Images checkbox is now fixed positioned.
-  Facelifts for 4chan Rewired and RedUX themes.
-  Removed NSFW Mascot Category, replaced with "Questionable".
-  Transferred mascots of questionable SFW status into the "Questionable" category.
-  New Mascots:
-  - Anime Girl in Bondage 2*
-  - Horo 2 and 3*
-  - Konjiki no Yami (Golden Darkness)*
-  - Nagato Yuki 7*
-  - Nodoka Miyazaki
-  - lazy's Samus Aran
-  - Rukia, Nia, and Asa*
-  - Tewi Inaba
-    * Mascots previously removed for nudity.
-  New Options:
-  - Alternate Post Colors.
-  - OP Backgrounds.
-  - New options for banner and logo positions.
-
-0.18.1
-- Zixaphir
-  Bugfix: Fix settings button after adding a custom mascot
-  Spoiler workaround for Linkify
-  New Option: Sage Highlight Position
-
-0.18.0
-- Zixaphir
-  Mascot Categories and category hiding.
-  Appchan now adds padding dynamically based on the size of the navigation bars.
-  The HTML element is now colored, meaning less white screens while loading.
-  Smaller options dialog
-
-0.17.4
-- Zixaphir
-  Option to enable the board subtitle.
-  Theme and Mascot undeleting
-  Mascot Importing and Exporting
-
-0.17.2
-- Zixaphir
-  New features:
-  - Per board refresh intervals.
-  - Reply Hide Link in Menu.
-  - Thread Hide Link in Menu.
-  - NSFW/SFW Mascot and Theme settings.
-- seaweed
-  Fix code tags width.
-
-0.17.1
-- Mayhem
-  Added thread creation QR cooldown.
-  Fix QR cooldown timer between non-sage and sage posts. You can submit a non-sage post 30 seconds after a sage one.
-  Fix /q/ QR cooldowns.
-- Zixaphir
-  Altered code to allow other userscripts to inject CSS. (previous behavior would cleanse header of style elements every time a node was injected.)
-
-0.16beta
-- Zixaphir
-  Allow uploading of images for use as backgrounds or mascots
-  New Options:
-    Tripcode Hider
-    A proper toggle for dark themes
-  New Themes:
-    ピンク
-    Yotsuba Purple
-    Vimyanized Dark
-    Tomorrow Night
-    Solarized Light
-    Muted
-    Monokai
-    Dark Flat
-    Blackboard
-    4chan Rewired
-    4chan Dark Upgrade
-
-0.15beta
-- Zixaphir
-  Youtube Embedding
-  - Requires Linkify.
-
-0.14beta
-- kupaka
-  Fix textarea font and user-defined font mismatching
-  Fixed images floating above navigation
-
-0.13beta
-- noface
-  Updater:
-    - It is now possible to set a interval for background tabs.
-    - Add optional increase value for Updater which can be configured on the 'rice' tab.
-  Don't automatically expand spoilers when using Expand Images.
-- Zixaphir
-  More robust linkifier
-  Lots more Mascot positioning options
-
-0.12beta
-- Zixaphir
-  Linkification (based off of Mayhem's LinkifyPlusfork)
-  Various changes to icon layout options.
-  -- They should try to be "smarter" now.
-  Option to move the #stats to the bottom of the page.
-- noface
-  Don't automatically expand spoilers when using Expand Images.
-
-0.11beta
-- Mayhem
-  Removed the obnoxious 4chan Pass ad in captcha errors when posting.
-  Fix 'Administrator/Moderator/Developer Replies' creating extra backlinks on /q/, again.
-- Zixaphir
-  New Options:
-  - Sidebar Location
-    * Move the sidebar to the other side of the window!
-  - Reply Padding:
-    * Add or remove padding of the reply content!
-  - Icon Orientation
-    * Set the icons to horizontal or vertical.
-  New options for board logo and banner positions, sidebar width, and margin sizes.
-  Silhouettes are back and now switch between dark and light versions on-the-fly.
-  Fixed the Spoiler Image checkbox.
-
-0.10.5beta
-- Zixaphir
-  Fix Settings button and broken mascot code causing appchan-x to fail to load
-    styles properly.
-
-0.10.2beta
-- Zixaphir
-  Bug fixes.
-
-0.9.9beta
-- Zixaphir
-  Custome Navigation
-
-0.9.8beta
-- Zixaphir
-  Fix post form tabbed slideout on everything that isn't Gecko-based.
-
-0.9.6beta
-- Mayhem
-  Larger Comment text input by default for 4chan Pass users and on /f/ (no captcha).
-- Zixaphir
-  Trying to step it up on the interface.
-  Theme customization interface no longer closes on save.
-
-0.9.5beta
-- Zixaphir
-  Theme importing from 4chan SS and Oneechan.
-    ( As 4chan SS is significantly different than Appchan X compared to Oneechan, )
-    ( 4chan SS themes may import weirdly. Any themes using custom CSS that depend )
-    ( on color variables from either will not work properly.                      )
-  Themes and Mascots are now automatically alphabetized.
-
-0.9.4beta
-- Zixaphir
-  Slightly snazzier interface.
-  Block blocked ads warning.
-
-0.9.3beta
-- Zixaphir
-  Removed Quote Threading.
-  -- I didn't want to, but it's broken and I can't fix it right now.
-     Might bring them back when I can.
-  Removed "Always Sage on /jp/".
-  -- I don't care about this board, but "always sage" just for a board is stupid.
-  New Option: Remember Sage.
-  -- My concession.
-- Mayhem
-  Larger Comment text input by default for 4chan Pass users and on /f/ (no captcha).
-  You can now use 'Enter' in keybind combinations.
-  Add support for 4chan Pass.
-  Fix 4chan Pass with QR on Firefox.
-
-0.9.2beta
-- Zixaphir
-  Fix the font size variable.
-
-0.9.1beta
-- Zixaphir
-  Mascot Tools
-  -- New
-  -- Delete
-  -- Edit
-  New Option: 'Images Overlap Post Form'
-
-0.9beta
-- Zixaphir
-  Switched default theme to Yotsuba B.
-  New Option: Updater Position.
-  More flexible margin style options
-  -- Disabling the sidebar now centers page content with all margin options.
-  -- The 'fully centered' option essentially force-enables the sidebar.
-  Theme Customization
-  -- New
-  -- Import
-  -- Export
-  -- Edit
-  -- Delete
-
-0.8beta
-- Zixaphir
-  New Themes:
-  -- Yotsuba
-  -- Yotsuba B
-  -- Redid PaisleyChan
-  Quote Links and Back Links now have separate color variables.
-  Small facelift to the options dialog.
-
-0.7.4beta
-- Zixaphir
-  New Theme: Solarized
-
-0.7.3beta
-- Zixaphir
-  Bugfix: Post form now clears properly with "Style" disabled.
-
-0.7.2beta
-- Zixaphir
-  Changed the font option from a dropdown to a text input.
-  Options are now fixed positioned instead of absolutely.
-  New option:
-    - Mascots Overlap Postform
-
-0.7.1beta
-- Zixaphir
-  Fixed broken 4chan on fresh install
-    I'm so sorry.
-
-0.7beta
-- Mayhem
-  Use 4chan's API to fetch posts for:
-    - Thread Updater.
-    - Quote Inlining.
-    - Quote Previewing.
-    - Thread Expansion.
-    - Comment Expansion.
-    This will make fetching faster, and reduce bandwidth usage.
-  Fix compatibility with Scriptish's auto-udpater.
-- Zixaphir
-  Fixed auto updating
-    (unrelated to similar 4chan x commit by Mayhem)
-  Fixed posting with autohide enabled and style enabled.
-  AppChan X now removes all 4chan CSS in head with style enabled.
-
-0.6.3beta
-- Zixaphir
-  Disable inlined 4chan JS "extension".
-
-0.6.2beta
-- Mayhem
-  Fix 4chan X. Blame moot.
-  Fix thread updater
-- seaweed
-  Fix options button
-- Zixaphir
-  ~70 more mascots
-
-0.6.1beta
-- Mayhem
-  Add /g/, /k/, /w/, /an/, /cgl/, /ck/, /lit/, /toy/ and /x/ archived image redirection.
-  One-word-captcha now works in the report window.
-  Fix duplicate file upload error link.
-
-0.6beta
-- Zixaphir
-  Select / Clear All Mascots links
-  Custom Checkboxes now apply to all checkboxes
-  File input doesn't look default-y
-
-0.5beta
-- Zixaphir
-  Fix text spoilers
-  New Options
-   -- Logo positions
-   -- Banner positions
-   -- Sidebar size
-  New Themes
-   -- ObsidianChan
-   -- PaisleyChan
-   -- Photon
-   -- Zenburned
-
-0.3beta
-- Zixaphir
-  New Theme:
-   -- Minimalistic Mayhem
-  Mascots (lots)
-  Fixed broken options, like reply spacing
-  Live editting of Style Options / Themes / Mascots
-
-0.2beta
-- Zixaphir
-  Pagination options now work. Also fixed Board Navigation options.
-  Cicle Checkboxes and On Side Pagination now work
-  New Themes:
-   -- AppChan
-   -- BakaBT
-   -- Blackberry Jam
-   -- Midnight Caek
-- Mayhem
-  One-word-captcha: you don't need to input an extra space anymore, the true word will be duplicated.
-
-0.1beta
-- Zixaphir
-  First 'stable' AppChan release. Little more than 4chan x + Style options. Based on 4chan x 2.34.8.
+1.0.0
+-Initial release
+zixaphir:
+  -Fix unread post count for filtered posts
+  -Fix issues when switching from ihavenoface's fork
+  -Fix backlinks not receiving filtered class
+  -Fix QR position not saving on refresh
