--- a/changelog
+++ b/changelog
@@ -1,6 +1,10 @@
 master
+
+1.0.3
 seaweedchan:
 	-Add ad-blocking CSS into Custom CSS examples
+Zixaphir:
+	-Fix ctrl+s bringing up save dialog
 
 1.0.2:
 seaweedchan:
