--- a/changelog
+++ b/changelog
@@ -4,7 +4,7 @@ master
 seaweedchan:
 	-Update supported boards for archive redirection and custom navigation
 	-Point to github.io instead of github.com for pages
-	-Fix post archive link for InstallGentoo
+	-Fix post archive link for InstallGentoo and Foolz
 	-Make InstallGentoo default for /g/
 
 1.0.5:
